[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/screens/splash_screen.gd" id="1"]

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.1, 0.15, 1)

[node name="ContentContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "BASTION'S LAST STAND"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Defend the Light. Embrace the Shadow."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PromptLabel" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Press any key to continue"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.8, 0.5, 1)
text = "âš™"
flat = true

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
